<resources>

    <string name="app_name">くらうどのーと</string>
    <string name="menu_settings">Settings</string>
    <string name="ok">OK</string>

    <string name="title_activity_login">ログイン画面</string>
    <string name="login_title">ログイン画面</string>
    <string name="label_login">ログインID</string>
    <string name="label_password">パスワード</string>
    <string name="login_button">ログイン</string>
    <string name="new_user_button">会員登録はこちらから</string>
    <string name="login_fail">ログインに失敗しました。</string>
    <string name="button_close_dialog">閉じる</string>
    
    <string name="label_logout">ログアウト</string>
    <string name="logout_button">ログアウト</string>
    
    <string name="label_more_notes">ノートをさらに読み込む</string>
    
    <string name="title_activity_note_list">ノートリスト</string>
    <string name="notification_dialog">結果</string>

    <string name="title_activity_note_show">詳細画面</string>
    <string name="label_note_title">件名 : </string>
    <string name="label_note_body">本文 : </string>
    
    <string name="title_activity_note_edit">編集画面</string>
    <string name="label_edit">編集</string>
    <string name="label_update">更新</string>
    <string name="label_back">戻る</string>

    <string name="title_activity_note_new">新規作成画面</string>
    <string name="new_button">新規作成</string>
    <string name="label_create">作成</string>
</resources>