<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back_ground"
    android:gravity="center_horizontal"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
    
        <ImageView
            android:layout_width="wrap_content"  
            android:layout_height="fill_parent"
            android:src="@drawable/note_8"
            android:contentDescription="@string/top_icon"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_login"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/text_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
    />
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/text_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
     />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        />
    <Button
        android:id="@+id/button_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_button"
        />

</LinearLayout>