<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:layout_marginBottom="6dip"
            >
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/label_note_title"
                />
            <EditText
                android:id="@+id/note_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
            />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <View android:id="@+id/Separator" 
                android:layout_width="wrap_content" 
                android:background="#BEBEBE" 
                android:layout_height="1dp" 
                android:layout_marginBottom="2dp">
            </View>    
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_note_body"
                android:layout_marginTop="6dip"
                android:layout_marginBottom="6dip"
                />
            <EditText
                android:id="@+id/note_body"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/fotter"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:layout_marginTop="3dp">
        <Button
            android:id="@+id/note_create"
            android:text="@string/label_create"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/note_back"
            android:text="@string/label_back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
      </LinearLayout>
</RelativeLayout>